kubernetes/vertical-pod-autoscaler/overlays/okd/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: openshift-vertical-pod-autoscaler
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
      ports:
        - protocol: TCP
          port: 6443
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
